Novo link de Menu

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 <body id="page-human" data-spy="scroll" data-target="#nav" data-offset="140">
     <header>
-        <!--Navbar and Brand-->
-        <nav class="navbar navbar-expand-lg navbar-dark  fixed-top  " style="background-color: rgb(17, 2, 53)">
+        <!--Navbar and  rgb(17, 2, 53)Brand-->
+        <nav class="navbar navbar-expand-lg navbar-dark  fixed-top  " style="background-color: rgba(0, 0, 0, 0.888)">
             <a class="navbar-brand" href="#" ><img src="imgs/logo.jpg" alt="logo" class="logo" ></a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,8 @@
                         <a class="nav-item nav-link" href="#artigo">Conheça seus Direitos</a>
                         <a class="nav-item nav-link" href="#mc" >Curriculum Vitae</a>         
                         <a class="nav-item nav-link" href="#instalacoes">Instalações</a>
-                        <a class="nav-item nav-link" href="#visita-text">Contatos</a>
+                        <a class="nav-item nav-link" href="#visita-text">Mande uma mensagem</a>
+                        <a class="nav-item nav-link" href="#copyright">Contatos</a>
                          <!-- SubMenu --> 
                     <li class="nav-item dropdown" >
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
@@ -191,13 +192,14 @@
         <hr>
     </div> -->
     <!--Sessão principal do footer-->
-    <div class="info width-80" id="texto">
+    <div class="info width-80" id="texto" style="padding-top: 30px;">
         <div class="row">
             <div class="coluna-footer col-sm-4">
               
-                <ul>
-                    <li><a href="#artigo"> Conheça seus Direitos</a></li>
+                <ul >
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#areaatuacao">Área de atuação</a></li>
+                    <li><a href="#artigo"> Conheça seus Direitos</a></li>
                     <li><a href="#mc">Curriculum Vitae</a></li>
                     <li><a href="#contato">Contatos</a></li>
                 </ul>
