add redes sociais

--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
 
 <footer>
     <!--Redes sociais e ícones do facebook e instagram-->
-    <!-- <div class="width-80">
-        <h5 class="redes-sociais"> Siga-nos no: <a href="#"> <i class="fa fa-facebook-official"></i></a><a href="#"> <i class="fa fa-instagram"></i></a></h5>
+     <div class="width-80" style="padding-top: 20px;">
+        <h5 class="redes-sociais"> <a href="#"> <i class="fa fa-facebook-official fa-lg"></i></a><a href="#"> <i class="fa fa-instagram fa-lg"></i></a> <a href="#"><i class="fa fa-whatsapp fa-lg"></i></a></h5>
         <hr>
-    </div> -->
-    <!--Sessão principal do footer-->
-    <div class="info width-80" id="texto" style="padding-top: 30px;">
+    </div>
+    <!-- Sessão principal do footer -->
+    <div class="info width-80" id="texto" style="padding-top: 13px;">
         <div class="row">
             <div class="coluna-footer col-sm-4">
               
