--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-item nav-link" href="#mc" >Curriculum Vitae</a>         
                         <a class="nav-item nav-link" href="#instalacoes">Instalações</a>
                         <a class="nav-item nav-link" href="#visita-text">Mande uma mensagem</a>
-                        <a class="nav-item nav-link" href="#copyright">Contatos</a>
+                        <a class="nav-item nav-link" href="#social">Contatos</a>
                          <!-- SubMenu --> 
                     <li class="nav-item dropdown" >
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
@@ -187,7 +187,7 @@
 
 <footer>
     <!--Redes sociais e ícones do facebook e instagram-->
-     <div class="width-80" style="padding-top: 20px;">
+     <div class="width-80" style="padding-top: 20px;" id="social">
         <h5 class="redes-sociais"> <a href="#"> <i class="fa fa-facebook-official fa-lg"></i></a><a href="#"> <i class="fa fa-instagram fa-lg"></i></a> <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5511991665270"><i class="fa fa-whatsapp fa-lg"></i></a></h5>
         <hr>
     </div>
