--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <footer>
     <!--Redes sociais e ícones do facebook e instagram-->
      <div class="width-80" style="padding-top: 20px;" id="social">
-        <h5 class="redes-sociais"> <a href="#"> <i class="fa fa-facebook-official fa-lg"></i></a><a href="#"> <i class="fa fa-instagram fa-lg"></i></a> <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5511991665270"><i class="fa fa-whatsapp fa-lg"></i></a></h5>
+        <h5 class="redes-sociais"> <a href="#"> <i class="fa fa-facebook-official fa-lg"></i></a><a href="#"> <i class="fa fa-instagram fa-lg"></i></a> <a href="http://api.whatsapp.com/send?1=pt_BR&phone=5511991665270" target="_blank"><i class="fa fa-whatsapp fa-lg"></i></a></h5>
         <hr>
     </div>
     <!-- Sessão principal do footer -->
