--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <!--Navbar and  rgb(17, 2, 53)Brand-->
         <nav class="navbar navbar-expand-lg navbar-dark  fixed-top  " style="background-color: #01132c">
-            <a class="navbar-brand" href="#" ><img src="imgs/MANOEL_MARTINS_estatua.png" alt="logo" class="logo" style="padding-left: 100px;" ></a>
+            <a class="navbar-brand" href="#" ><img src="imgs/logo.png" alt="logo" class="logo" style="padding-left: 100px;" ></a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
