--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <!--Navbar and  rgb(17, 2, 53)Brand-->
         <nav class="navbar navbar-expand-lg navbar-dark  fixed-top  " style="background-color: #01132c">
-            <a class="navbar-brand" href="#" ><img src="imgs/logo.png" alt="logo" class="logo" style="padding-left: 100px;" id="logo"></a>
+            <a class="navbar-brand" href="#" ><img src="imgs/logo.png" alt="logo" class="logo" id="logo"></a>
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
                                   </div>
                                 </li>
                                 <!-- Redes Sociais -->
-                                <div style="float:left">
+                                <div style="float:left" id="redes">
 
                                     <a href="https://www.facebook.com/martins.gonzales.31" target="_blank">
     
