Add curriculo lates

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <p>Atuou como procurador de Diversas Construtoras e Imobiliários, prestando assessoria junto aos compradores esclarecendo e orientando-os sobre contratos a serem assinados. Presta assessoria jurídica a escritórios de contabilidade e empresas diversas desde 2005.</p>
             <p>Advogado cadastrado no Convenio entre a Procuradoria Geral do Estado – PGE e a Ordem dos Advogados do Brasil - OAB/SP.</p>
 
-            <a href="http://lattes.cnpq.br/2440787729024828" target="_blank">Currículo Acadêmico </a>
+            <a href="http://lattes.cnpq.br/2440787729024828" target="_blank"><img src='imgs/Curriculolattes.png' ></a>
            
         </div>
         <div id="fundo" style="padding-top: 20px;">
