--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="main-banner" id="home">
             <div class="banner-texto">
                 <h1><br> Dr. Manoel Martins Gonzales</h1> Assessoria Empresarial e Familiar
-                <br> Administração de Bens, Assessoria em Leões Judiciais,
+                <br> Administração de Bens, Assessoria em Leilões Judiciais,
                 <br> Advogado Dativo e Correspondente
                 <br> Cível – Consumidor – Criminal – Família- Trabalhista
                 <br>
@@ -139,29 +139,29 @@
                 </p>
 
                 <div class="row">
-                    <div class="col-md-4 col-lg-4" style="margin-bottom: 30px;">
-                        <img id="instalacao" src="imgs/estacionamento.jpg">
+                    <div class="col-md-4 col-lg-4" style="margin-bottom: 30px; ">
+                        <img id="instalacao" src="imgs/entrada.jpg" >
                         <p id="textoinstalacao">Entrada</p>
 
                     </div>
 
                     <div class="col-md-4 col-lg-4" style="margin-bottom: 30px;">
-                        <img id="instalacao" src="imgs/estacionamento.jpg">
-                        <p id="textoinstalacao">Foto 1</p>
+                        <img id="instalacao" src="imgs/escritorio1.jpg" >
+                        <p id="textoinstalacao">Escritório</p>
 
                     </div>
 
                     <div class="col-md-4 col-lg-4" style="margin-bottom: 30px;">
-                        <img id="instalacao" src="imgs/salas.jpg">
+                        <img id="instalacao" src="imgs/salareuniao.jpg">
                         <p id="textoinstalacao">Salas de Reunião</p>
                     </div>
                     <div class="col-md-4 col-lg-4" style="margin-bottom: 30px;">
-                        <img id="instalacao" src="imgs/salareuniao.jpg">
+                        <img id="instalacao" src="imgs/estacionamento.jpg">
                         <p id="textoinstalacao">Estacionamento acessivel para clientes</p>
                     </div>
                     <div class="col-md-4 col-lg-4" style="margin-bottom: 30px;">
-                        <img id="instalacao" src="imgs/auditorio.jpg">
-                        <p id="textoinstalacao">Foto 2</p>
+                        <img id="instalacao" src="imgs/escritorio2.jpg">
+                        <p id="textoinstalacao">Escritório</p>
                     </div>
 
                     <div class="col-md-4 col-lg-4" style="margin-bottom: 30px;">
